--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,19 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <xyz.panyi.shadedemo.RenderView
-        android:id="@+id/render_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        />
-
     <RadioGroup
         android:id="@+id/effect_type_group"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/render_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
@@ -48,5 +39,17 @@
             android:layout_height="wrap_content"
             />
     </RadioGroup>
+
+    <xyz.panyi.shadedemo.RenderView
+        android:id="@+id/render_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/effect_type_group"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
